--- a/RAGTrainingSpacy.ipynb
+++ b/RAGTrainingSpacy.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -201,22 +201,8 @@
       "---\n",
       "\n",
       "Answer the question based on the above context: Who is Ender Wiggin?\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\BrendanHaas\\envs\\RAGLLM\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The method `BaseChatModel.predict` was deprecated in langchain-core 0.1.7 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Response: Ender Wiggin is a character in the story who is dealing with the influence and manipulation of his siblings, Peter and Valentine, as well as facing challenges and pressure in his training to potentially save the world from an alien threat.\n",
+      "\n",
+      "Response: content='Ender Wiggin is a character who has a complex relationship with his siblings, particularly with his sister Valentine and his brother Peter. He is also shown to have a strong connection with Petra. Ender is portrayed as someone who is resilient and able to handle difficult situations, even when faced with challenges from his brother Peter.' response_metadata={'token_usage': {'completion_tokens': 64, 'prompt_tokens': 316, 'total_tokens': 380}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None} id='run-4b8c2295-5bac-4f71-a479-06bcd828f933-0' usage_metadata={'input_tokens': 316, 'output_tokens': 64, 'total_tokens': 380}\n",
       "Sources: ['data\\\\EndersGame.txt', 'data\\\\EndersGame.txt', 'data\\\\EndersGame.txt']\n"
      ]
     }
@@ -246,7 +232,7 @@
     "    print(prompt)\n",
     "\n",
     "    model = ChatOpenAI()\n",
-    "    response_text = model.predict(prompt)\n",
+    "    response_text = model.invoke(prompt)\n",
     "\n",
     "    sources = [doc.metadata.get(\"source\", None) for doc, _score in results]\n",
     "    formatted_response = f\"Response: {response_text}\\nSources: {sources}\"\n",
